src/App.scss
@import './variables.scss';

.app {
  // background-image: linear-gradient(to right, $lavendar-pink, $lavendar-purple);
  // background-image: url('assets/bg.png');
  background-size: cover;
  background-image: url('assets/bg.svg'), linear-gradient(to right, #DC6BE5, #A41DE4);
  display: flex;
  flex-flow: column nowrap;
  height: 100%;
  width: 100%;
  color: $white;
  overflow: scroll;

  &__content {
    display: flex;
    flex-flow: column nowrap;
    flex: 1 0 auto;
  }

  &__header {
    padding: 4.125rem 0 0;
  }

  &__mobile-button-group {
    display: none;
  }

  &__spacing {
    flex: 1 0 auto;
    // margin-top: 4rem;
    max-height: 3rem;
  }

  &__logo {
    width: 3rem;
    height: 3rem;
    //background-color: $white;
    margin-left: 4.4375rem;
    //border-radius: 50%;
  }

  &__top,
  &__bottom {
    flex: 0 0 auto;
    margin-left: 4.4375rem;
    margin-right: 13rem;
    display: flex;
    flex-flow: row nowrap;
  }

  &__top {
    // margin-bottom: 3.25rem;
  }

  &__bottom {
    margin-top: 3.5rem;
  }

  &__arrows {
    flex: 0 0 auto;
    display: flex;
    flex-flow: row nowrap;
  }

  &__line {
    width: calc(100% - 27.375rem);
    height: 2px;
    background-image: linear-gradient(to right, $lavendar-pink, $white);
  }

  &__curves {
    position: relative;
    display: flex;
    flex-flow: column nowrap;
  }

  &__curve-up {
    border: 2px solid $white;
    height: 8rem;
    width: 7rem;
    border-top-width: 0;
    border-left-width: 0;
    position: absolute;
    left: 0;
    top: -8rem;
    border-bottom-right-radius: 6rem 7rem;

    &__arrow {
      border: solid $white;
      border-width: 0 2px 2px 0;
      display: inline-block;
      padding: 6px;
      transform: rotate(-135deg);
      position: relative;
      right: -95%;
    }
  }

  &__curve-down {
    border: 2px solid $white;
    height: 8rem;
    width: 7rem;
    border-bottom-width: 0;
    border-left-width: 0;
    position: absolute;
    left: 0;
    bottom: -8rem;
    border-top-right-radius: 6rem 7rem;

    &__arrow {
      border: solid $white;
      border-width: 0 2px 2px 0;
      display: inline-block;
      padding: 6px;
      transform: rotate(45deg);
      position: relative;
      right: -95%;
      bottom: -87%;
    }
  }

  &__main-text-wrapper {
    flex: 1 0 auto;
    width: 0;
  }

  &__main-text {
    font-size: 2.25rem;
    font-weight: 500;
    line-height: 3.25rem;
    max-width: 35rem;
  }

  &__bottom {
    align-items: flex-end;
  }

  &__point {
    font-size: 1rem;
    line-height: 1.5rem;
    color: $concrete-gray;

    a {
     color: $white;
     text-decoration: none;

     &:hover {
       text-decoration: underline;
     }

    }
  }

  .arrow{
    opacity: .4;
  }

  &__point + &__point {
    margin-top: .75rem;
  }

  &__footer {
    margin: 2rem 0 4.125rem 4.4375rem;
    //margin-left: 4.4375rem;
    //margin-bottom: 4.125rem;
  }

  &__special-text {
    color: $concrete-gray;
    font-size: 1rem;
    line-height: 1.5rem;
    padding-bottom: 1rem;
    cursor: pointer;
  }

  &__special-text:hover{
    text-decoration: underline;
  }

  &__actions {
    display: flex;
    flex-flow: row nowrap;

    a {
      font-size: 1rem;
      line-height: 1.5rem;
      font-weight: 600;
      color: $white;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }

    a + a {
      margin-left: 1.5rem;
    }
  }

  @media only screen and (max-width: 1080px) {
    &__top,
    &__bottom {
      margin-right: 3rem;
    }

    &__line {
      width: calc(100% - 17.375rem);
    }
  }

  @media only screen and (max-width: 910px) {
    &__main-text {
      font-size: 1.75rem;
      height: 9.75rem;
      //width: 0;
    }

    &__point {
      font-size: .8rem;
      //line-height: 1rem;
    }
  }

  @media only screen and (max-width: 750px) {
    &__header {
      padding: 0;
    }

    &__spacing {
      display: none;
    }

    &__logo {
      margin: 1.5rem;
    }

    &__top {
      margin: 0;
      margin-top: 2rem;
      display: flex;
      flex-flow: column nowrap;

      button {
        display: none;
      }

      .app__main-text-wrapper {
        flex: 0 0 auto;
        width: 100%;
        padding: 0 1.5rem;
        box-sizing: border-box;
      }

      .app__main-text {
        font-size: 1.75rem;
        line-height: 2.75rem;
        height: unset;
      }
    }

    &__mobile-button-group {
      display: flex;
      flex-flow: row nowrap;
      margin: 1rem auto 1rem;

      button {
        display: block;
        padding: .25rem  1.5rem;
        height: unset;
        min-width: unset;
        font-size: .75rem;

        &:nth-of-type(1) {
          margin-right: .5rem;
        }

        &:nth-of-type(2) {
          margin-left: .5rem;
        }
      }
    }

    &__arrows {
      position: relative;
    }

    &__line {
      width: 100%;
      background-image: linear-gradient(to right, $lavendar-pink 0%, $white 50%);
    }

    &__curves {
      position: absolute;
      top: 2px;
      right: 2rem;
    }

    &__curve-up {
      display: none;
    }

    &__curve-down {
      right: 0;
      left: unset;
      height: 20rem;
      bottom: -20rem;

      &__arrow {
        bottom: -95%;
      }
    }

    &__bottom {
      // margin: 4.875rem 4rem 0 .625rem;
      margin: 1.5rem;
      margin-top: 3rem;

      button {
        // display: none;
      }

      .btn__primary{
        padding: 0;
        padding: .25rem 1rem;
        height: 2.5rem;
        font-size: .75rem;
        min-width: 9rem;
        margin-right: 1.5rem;
      }

      .app__point {
        font-size: 1rem;
        line-height: 1.5rem;
        //padding: 0 1.5rem;
      }
    }

    &__footer {
      margin: 1rem;
    }

    &__actions a{
      display: flex;
      flex-flow: row nowrap;
      align-items: center;
      justify-content: center;
      font-size: .75rem;
      margin-left: 1rem;
    }
    &__actions a+a{
      margin-left: 1rem;
    }

    &__special-text{
      font-size: .75rem;
      margin-left: 1rem;
      // display: none;
    }
  }
}

.btn {
  &__primary {
    min-width: 14.375rem;
    font-size: 1rem;
    line-height: 1.5rem;
    // padding: 1rem;
    height: 3rem;
    border-radius: 3.5rem;
    margin-right: 2rem;
    background-color: rgba(196,74,229, 1);
    border: 1px solid $white;
    color: $white;
    font-weight: 700;
    cursor: pointer;
    user-select: none;
    outline: none;
    box-shadow: 0 0 16px 4px rgba($royal-blue, 0.1);
    transition: 200ms ease-in-out;

    &:hover {
      background-color: rgba(196,74,229, .2);
      //background-color: rgba($alabaster-gray, .25);
    }

    &:active {
      //background-color: rgba($alabaster-gray, .35);
      background-color: rgba($alabaster-gray, .25);
    }
  }
}

.text {
  &--bold {
    font-weight: 600;
    color: $white;
  }
}

